<resources>
    <string name="app_name">TimeLab</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="title_activity_photo">Photo Profiles</string>
    <string name="title_activity_video">Video Profiles</string>
    <string name="title_activity_add_times">Add Times Array</string>
    <string name="title_activity_add_photo">Add Photo Profile</string>
    <string name="title_activity_add_video">Add Video Profile</string>
    <string name="title_activity_choose_mode">Choose Mode</string>
    <string name="title_activity_array_management">Array Management</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="create">Create</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_float_array_manage">Times\nManage</string>
    <string name="title_float_photo_add">Add\nProfile</string>

    <string name="item_array_1">Time 1</string>
    <string name="item_array_2">Time 2</string>
    <string name="item_array_3">Time 3</string>
    <string name="item_array_4">Time 4</string>
    <string name="item_array_5">Time 5</string>
    <string name="item_array_6">Time 6</string>
    <string name="item_array_7">Time 7</string>
    <string name="item_array_8">Time 8</string>
    <string name="item_array_9">Time 9</string>
    <string name="item_array_10">Time 10</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="succes_registered">Successfully registered!</string>

    <string name="title_activity_splash">TimeLab</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">TIME\nLAB</string>

    <!-- String for registration and login activity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="error_user_not_exist">That user not exist.</string>
    <string name="error_user_exist">That user already exist.</string>
    <string name="create_new_user">You can create new account.</string>
    <string name="error_invalid_name">Invalid name.</string>
    <string name="error_invalid_user">That user not exist.</string>
    <string name="chb_remember">Remember me?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_summary">Summary Visiblity</string>
    <string name="pref_title_userinfo">User Info Visiblity</string>
    <string name="pref_title_profile">Profile Info Visiblity</string>

    <string name="title_activity_tabbed_main">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
